#데이터베이스 환경변수 업데이트

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # PostgreSQL 설정
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-POSTGRES_DB=todo_db
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=todo_db
 
 # Redis 설정
 REDIS_HOST=localhost
